--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.3.0",
     "babel-plugin-emotion": "^11.0.0",
     "date-fns": "^2.25.0",
+    "firebase": "^9.4.1",
+    "firebase-admin": "^10.0.0",
     "next": "12.0.3",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
